[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "wujihandpy"
dynamic = ["version"]
description = "Python bindings for WujiHandCpp"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Wuji Technology", email = "support@wuji.tech" }]
maintainers = [{ name = "Wuji Technology", email = "support@wuji.tech" }]
dependencies = ["numpy"]

[project.urls]
homepage = "https://github.com/wuji-technology/wujihandpy"
repository = "https://github.com/wuji-technology/wujihandpy"
"Bug Tracker" = "https://github.com/wuji-technology/wujihandpy/issues"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/wujihandpy/_version.py"]
cmake.build-type = "Release"

[tool.setuptools_scm]
write_to = "src/wujihandpy/_version.py"

[tool.cibuildwheel]
archs = ["native"]
skip = "*-musllinux*"

[tool.cibuildwheel.linux]
before-all = "dnf install -y libusbx libusbx-devel"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = '''
delvewheel repair --add-path "%VCPKG_ROOT%/installed/%VCPKG_TRIPLET%/bin" -w {dest_dir} {wheel}
'''